fix responsive on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   --primary: black;
   --secondary: white;
   --white: #fff;
+
+  --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
 }
 
 ::-webkit-scrollbar {
@@ -66,23 +70,25 @@ section {
   margin-left: auto;
 }
 
-@media (min-width: 768px) {
+/* ============= MEDIA QUERIES (MEDIUM DEVICES) ============= */ 
+@media screen and (max-width: 1024px) {
   .container {
-    width: 750px;
+      width: var(--container-width-lg);
+  }
+
+}
+
+/* ============= MEDIA QUERIES (SMALL DEVICES) ============= */ 
+@media screen and (max-width: 600px) {
+  .container {
+      width: var(--container-width-sm);
+  }
+
+  .heading {
+    font-size: 200%;
   }
 }
 
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
 
 *,
 *:before,
