--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -156,3 +156,9 @@
         font-size: 90%;
     }
   }
+
+@media (max-width: 1024px) {
+    .modal-desc > h2 {
+        font-size: 150%;
+    }
+  }
